--- a/base/src/main/res/layout/dialog_bottom_sheet.xml
+++ b/base/src/main/res/layout/dialog_bottom_sheet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -19,7 +20,7 @@
                 android:id="@+id/appbar_lay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/app_translucent"
+                android:background="@color/app_transparent"
                 android:elevation="0dp"
                 app:elevation="0dp">
 
@@ -48,20 +49,9 @@
 
                 </androidx.core.widget.NestedScrollView>
 
-<!--                <View-->
-<!--                    android:id="@+id/appbar_elevation"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="2dp"-->
-<!--                    android:layout_alignParentStart="true"-->
-<!--                    android:layout_alignParentTop="true"-->
-<!--                    android:background="@drawable/appbar_shadow"-->
-<!--                    android:visibility="gone"-->
-<!--                    tools:visibility="visible" />-->
-
             </RelativeLayout>
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -74,26 +64,15 @@
                 android:id="@+id/footer_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-<!--                <View-->
-<!--                    android:id="@+id/footer_elevation"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="1dp"-->
-<!--                    android:background="@drawable/footer_shadow" />-->
+                android:orientation="vertical"
+                tools:ignore="UselessParent">
 
                 <FrameLayout
                     android:id="@+id/footer_content"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
-<!--            <View-->
-<!--                android:id="@+id/fill_nav"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="0dp"-->
-<!--                android:background="#fff" />-->
         </LinearLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
