--- a/base/src/main/res/layout/header_awesome.xml
+++ b/base/src/main/res/layout/header_awesome.xml
@@ -1,71 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/app_white"
+        android:background="@color/app_transparent"
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/fill_layout"
+            android:id="@+id/title_lay"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/app_transparent"
-            android:gravity="bottom">
+            android:layout_height="64dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingHorizontal="15dp">
 
-            <View
-                android:id="@+id/fill_view"
+            <ImageView
+                android:id="@+id/close_btn"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/svg_icon_clean"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:background="@color/white"
-                android:fitsSystemWindows="true" />
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="分享" />
+
+            <TextView
+                android:id="@+id/little_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="分享到"
+
+                />
 
         </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/hide_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white">
-
-            <LinearLayout
-                android:id="@+id/title_lay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:padding="10dp"
-                android:visibility="invisible"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/close_btn"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:padding="5dp"
-                    android:src="@drawable/svg_icon_clean" />
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="?android:textColorPrimary"
-                    tools:text="分享" />
-
-                <TextView
-                    android:id="@+id/little_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:textColor="?android:textColorPrimary"
-                    tools:text="分享到" />
-
-            </LinearLayout>
-        </RelativeLayout>
 
     </LinearLayout>
 </layout>
