--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -12,12 +12,15 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
-    <style name="FullDialogStyle" parent="android:style/Theme.Dialog">
-        <item name="android:windowBackground">@color/white</item>
+    <style name="AppDialogFullScreen" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:scrollHorizontally">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowSoftInputMode">adjustPan</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowIsFloating">false</item>
+<!--        <item name="android:windowTranslucentStatus">true</item>-->
+<!--        <item name="android:windowFullscreen">true</item>-->
     </style>
 
     <style name="HorizontalLine">
