--- a/base/src/main/res/layout/widget_album_clip.xml
+++ b/base/src/main/res/layout/widget_album_clip.xml
@@ -11,8 +11,8 @@
             android:id="@+id/title"
             layout="@layout/widget_title_with_button"
             app:buttonColor="@{@color/app_blue}"
-            app:buttonText="@{`完成`}"
-            app:title="@{`裁剪图片`}" />
+            app:buttonText="@{@string/complete}"
+            app:title="@{@string/cuttingPictures}" />
 
         <LinearLayout
             android:layout_width="match_parent"
